2005-11-11  Christopher Faylor  <cgf@timesys.com>

	* libc/include/sys/time.h: For cygwin, use general header rather than
	specific "sys/select.h".

2005-11-08  Tom Walsh  <tom@openhardware.net>

	* libc/time/tzvars.c: New file.
	* libc/time/tzset_r.c: Moved globals into tzvars.c
	so other time functions needn't link in __tzset_r and its
	dependencies.
	* libc/time/Makefile.am: Add the new file.
	* libc/time/Makefile.in: Regenerated.

2005-11-08  Christopher Faylor  <cgf@timesys.com>

	* libc/include/string.h: Add cygwin-specific function declaration.

2005-11-03  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/unix/getcwd.c: Don't use non-reentrant syscall names.
	* libc/unix/getlogin.c: Ditto.
	* libc/unix/getpass.c: Ditto.
	* libc/unix/getut.c: Ditto.
	* libc/unix/ttyname.c: Ditto.

2005-11-03  Shaun Jackman  <sjackman@gmail.com>

	* libc/include/sys/unistd.h (readlink, symlink): Provide these
	prototypes by default.
	* libc/sys/linux/include/unistd.h (readlink): Remove this
	prototype.
	* libc/sys/linux/sys/unistd.h (readlink, symlink): New
	prototypes.

2005-11-01  Ralf Corsepius <ralf.corsepius@rtems.org>

	* libc/include/stdint.h: Cleanup #if vs. #ifdef.

2005-10-31  Darin Johnson  <darin@usa.net>

	* libm/mathfp/s_mathcnst.c: Fix endian-ness check to be
	correct for constants.

2005-10-28  Bob Wilson  <bob.wilson@acm.org>

	* libc/stdio/siprintf.c: Wrap long lines in ANSI_SYNOPSIS.
	* libc/stdio/siscanf.c: Likewise.
	* libc/stdio/sprintf.c: Likewise.
	* libc/stdio/sscanf.c: Likewise.
	* libc/stdio/vfprintf.c: Likewise.
	* libc/stdio/vfscanf.c: Likewise.
	* libc/stdio/viprintf.c: Likewise.
	* libc/stdio/viscanf.c: Likewise.

2005-10-28  Bob Wilson  <bob.wilson@acm.org>

	* libc/sys.tex (Stubs): Format examples consistently.   Change sbrk
	example to use "_end" symbol instead of "end".  Change write  example
	to use "outbyte" instead of "writechar".

2005-10-28  Bob Wilson  <bob.wilson@acm.org>
