@@ -28,10 +28,11 @@
 #include <string.h>
 
 #include <elf.h>
-#include <dlfcn.h>
 #include <link.h>
 #include <dl-lookupcfg.h>
 #include <bits/libc-lock.h>
+
+#include "dl-local.h"
 
 __BEGIN_DECLS
 
